<resources>
    <string name="app_name">Medipal</string>

    <string name="home">Home</string>
    <string name="my_meds">My Meds</string>
    <string name="appointments">Appointments</string>
    <string name="more">More</string>
    <string name="reminders">Reminders</string>

    <!--arrays-->
    <string-array name="tab_items">
        <item>@string/home</item>
        <item>@string/my_meds</item>
        <item>@string/appointments</item>
        <item>@string/reminders</item>
        <item>@string/more</item>
    </string-array>

    <string-array name="category_items">
        <item>Select Category</item>
        <item>Supplement</item>
        <item>Chronic</item>
        <item>Incidental</item>
        <item>Complete Course</item>
        <item>Self Apply</item>
    </string-array>

    <string-array name="more_items">
        <item>Profile</item>
        <item>Health Bio</item>
        <item>Measurements</item>
        <item>Emergency Contacts</item>
        <item>Categories</item>
        <item>Consumptions</item>
        <item>Tutorial</item>
    </string-array>

    <string-array name="blood_type_items">
        <item>A +</item>
        <item>B +</item>
        <item>O +</item>
        <item>AB +</item>
        <item>A -</item>
        <item>B -</item>
        <item>O -</item>
        <item>AB -</item>
    </string-array>

    <string-array name="dosage_quantity_items">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="frequency_quantity_items">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="tut_heading_array">
        <item>View your daily consumptions</item>
        <item>Add and manage your medicines</item>
        <item>Add and manage your appointments</item>
        <item>Manage your Reminders</item>
        <item>More features for you</item>
    </string-array>

    <string-array name="tut_content_array">
        <item>Mark your consumptions and visualise on a day by day basis.</item>
        <item>Add, edit and delete your medicines and its details.</item>
        <item>Add your upcoming health appointments that should not be missed.</item>
        <item>Lists out all your medicine and appointment reminders</item>
        <item>Manage your user profile, health conditions, measurements, contacts and medicine categories.</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_text">OK</string>
    <string name="warning">Warning!</string>
    <string name="alert">Alert</string>

    <!--Appointment functionality -->
    <string name="location">Location</string>
    <string name="date_select">Select Date</string>
    <string name="app_time">Time</string>
    <string name="description">Description</string>
    <string name="StatusReport">Status Report</string>
    <string name="not_editable_Location">Location(Not Editable)</string>

    <!--Measurements -->
    <string name="blood_pres">Blood Pressure</string>
    <string name="pulse">Pulse</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="pulseText">Pulse(bpm)</string>
    <string name="temperatureText">Temperature(\'C)</string>
    <string name="weightText">Weight(Kg)</string>
    <string name="blood_sys">Systolic(mmHg)</string>
    <string name="blood_dia">Diastolic(mmHg)</string>
    <string name="blood_mes">MeasuredOn</string>

    <string name="strt_time_select">Start Time</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="generic_error">Sorry something went wrong! We\'re looking into it!</string>
    <string name="st_time_et_time_validation_msg">Start time should be greater than End time</string>
    <string name="date_validation_msg">Please select a valid date for booking</string>
    <string name="time_validation_msg">Please select a valid time for booking</string>

    <!--User Screen -->
    <string name="name">Name</string>
    <string name="id_number">ID Number</string>
    <string name="dob_text">Date of birth</string>
    <string name="enter_details_text">Enter your profile details</string>
    <string name="profile_text">Profile</string>
    <string name="address_text">Address</string>
    <string name="building_name_text">Building</string>
    <string name="location_text">Location</string>
    <string name="streetname_text">Street</string>
    <string name="level_text">Level</string>
    <string name="unit_text">Unit</string>
    <string name="postal_text">Postal Code</string>
    <string name="height_text">Height (in cms)</string>
    <string name="blood_type_text">Blood Type</string>
    <string name="enter_all_details_text">Please enter all fields</string>
    <string name="submit_text">Submit</string>

    <!--Meds Screen -->
    <string name="category_text">Category</string>
    <string name="dosage_text">Dosage (Pills per Dosage)</string>
    <string name="frequency_text">Frequency</string>
    <string name="interval_text">Interval</string>
    <string name="title_activity_add_temperature">AddTemperatureActivity</string>
    <string name="not_editable_name">Name(Not Editable)</string>
    <string name="reminders_mandatory_text">Reminder (Mandatory for this Category)</string>
    <string name="reminders_optional_text">Reminder (Optional for this Category)</string>


    <!--Home Screen -->
    <string name="home_screen_no_meds_text">You must enter medications to begin using this application</string>
    <string name="home_screen_go_to_my_meds_button_text">Add New Drug</string>
    <string name="i_took_it">I took it!</string>
    <string name="select_dose">Please select a dose</string>
    <string name="home_dose_change_title">Please select whether you took or missed this dose.</string>
    <string name="took_it_text">Took It</string>
    <string name="missed_it_text">Missed It</string>

    <!---Health Bio -->
    <string name="condition">Condition</string>
    <string name="enter_details">Enter your Health Bio</string>
    <string name="start_date">Start Date</string>
    <string name="condition_type">Condition Type</string>
    <string name="condition_type_condition">Condition</string>
    <string name="condition_type_allergy">Allergy</string>
    <string name="unsuccesful">Sorry something went wrong!!</string>
    <string name="succesful">Data succesfully saved</string>

    <string name="category_title">Categories</string>
    <string name="health_bio_title">Health Bio</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>

    <!-- Category -->
    <string name="category_name">Category Name</string>
    <string name="category_code">Category Code</string>
    <string name="category_remind">Remind</string>
    <string name="category_description">Description</string>
    <string name="category_save_pop_up_text">successfully saved</string>

    <string name="medication_positive_text">I took it</string>
    <string name="medication_negative_text">I Missed it</string>
    <string name="need_to">Need to </string>
    <string name="take">take</string>
    <string name="refill">refill</string>
    <string name="pills">Pills</string>
    <string name="pill">Pill</string>
    <string name="of">of</string>
    <string name="colon">:</string>
    <string name="dosage_time">Dosage Time</string>
    <string name="consumption">Consumption</string>
    <string name="by_date_text">By Date</string>
    <string name="by_med_text">By Meds</string>
    <string name="loading_text">Loading...</string>

</resources>
