<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/submit_btn"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_small"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_details_text"
                style="@style/HeadingTextViewStyle"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_id_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/id_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_dob_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/dob_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob_text"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_height_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/height_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_text"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/pack_spinner_hint"
                    style="@style/SubHeadingTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_type_text" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_blood_list"
                    style="@style/InputLayoutEditTextStyleDark"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_margin="@dimen/padding_small"
                    android:spinnerMode="dropdown" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_text"
                android:paddingTop="@dimen/padding_small"
                style="@style/SubHeadingTextViewStyle"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_building_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/building_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/building_name_text"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_inputlocation_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/location_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_text"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_streetname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/streetname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/streetname_text"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_level_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small"
                    android:textColorHint="?colorPrimary"
                    app:hintTextAppearance="@style/HintTextStyle"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        style="@style/InputLayoutEditTextStyleDark"
                        android:id="@+id/level_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/level_text"
                        android:imeOptions="actionNext"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_unit_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small"
                    android:textColorHint="?colorPrimary"
                    app:hintTextAppearance="@style/HintTextStyle"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatEditText
                        style="@style/InputLayoutEditTextStyleDark"
                        android:id="@+id/unit_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit_text"
                        android:imeOptions="actionNext"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_postal_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:textColorHint="?colorPrimary"
                app:hintTextAppearance="@style/HintTextStyle">

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/postal_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_text"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_generic_tiny"
        android:layout_marginRight="@dimen/margin_generic_tiny"
        android:layout_marginBottom="@dimen/margin_generic_low"
        android:text="@string/submit_text"
        android:layout_alignParentBottom="true"
        style="@style/GreenBtnStyle"
        />

</RelativeLayout>