<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iss.medipal.ui.activities.AddCategoryActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <include layout="@layout/toolbar_generic"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:layout_weight="1"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:layout_below="@+id/toolbar">



                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/category_code_hint"
                    style="@style/SubHeadingTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_code" />

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/categoryCodeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:layout_margin="@dimen/padding_small"

                    />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/category_name_hint"
                    style="@style/SubHeadingTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_name" />

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/categoryNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:layout_margin="@dimen/padding_small"
                    />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/SubHeadingTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <android.support.v7.widget.AppCompatEditText
                    style="@style/InputLayoutEditTextStyleDark"
                    android:id="@+id/categoryDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lines="6"
                    android:inputType="textMultiLine"
                    android:layout_margin="@dimen/padding_small"
                    />

                <Switch
                    android:text="Reminder"
                    style="@style/SubHeadingTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/category_remindSwitch"
                    />
                <Button
                    android:id="@+id/saveCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/margin_generic_tiny"
                    android:layout_marginRight="@dimen/margin_generic_tiny"
                    android:layout_marginBottom="@dimen/margin_generic_low"
                    android:text="@string/submit_text"
                    style="@style/GreenBtnStyle"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
